--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ $scope.mapText = dataArray.map(function(item) {
       </div>
     </div>
   </body>
-<div></div>
+<div></div><div></div>
 </html>
     <script>
       var editor = CodeMirror.fromTextArea(document.getElementById("SampleCode"), {
