--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <button ng-click="onReduceClick()" class="btn btn-default " style="">Reduce Sum</button>
       <label>{{reducedText}}</label>
       <input type="checkbox" ng-model="showCode2" />
- Show Code        <br />
+ Show Code        <br /><br />
       <p></p>
       <div style="margin:10px">
         
